tests/parsing/smtlib/v2.7/errors/151_sorted_var_list_unclosed_1.smt2
(set-logic ALL)
(define-fun-rec foo ((x int) _))
